# arena

./: .taurignore  README.md  bun.lockb  package-lock.json  package.json
src/: App.tsx  custom.css  simple.css
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/python/: parse.py
src-tauri/src/: main.rs
